fix: resolved conflict